--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<p>Курсы Hexlet (в процессе обучения)</p>
 				<ul>
 					<li>Фронтенд JavaScript</li>
-					<li>Бэкенд JavaScript (nide.js)</li>
+					<li>Бэкенд JavaScript (node.js)</li>
 					<li>Верстальщик</li>
 				</ul>
 				<p>Кемеровский Кооперативный Техникум</p>
