--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="style.css">
-		<title> Резюме Хекслет </title>
 	</head>
 	<body>
 		<div id="header">
@@ -13,10 +12,13 @@
 			<a href="vk.com/id142609900"> vk.com/id142609900</a></p>
 		</div>
 		<div id="main">
-			<p>Был в статусе ИП до осени 2019г. Ввиду опеределенных экономических проблем,
-				закрыл/продал все имущество<br>Стал заниматься тем, что мне было давно интересно,
-			изучение языков программирования, а так же тестирование.<br>Прохожу курсы Hexlet
-			в дальнейшем планирую не останавливаться и повышать свой скилл в разработке.</p>
+			<p>Активно изучаю JS с января 2020, прохожу базовые курсы по HTML, CSS.<br>
+			В данный момент трачу ~70 - 80% времени на изучения JS, еще немного на дорожку, 
+			чтобы сохранялась возможность проходить в дверной проем =)</p>
+			<p>В приоритете любой тип занятости для прокачки навыков, с надеждой на долгосрочное сотрудничество.<br>
+			Идеально будет именно повышать скилл т.к есть огромный интерес и желание стать действительно хорошим специалистом в хорошей, 
+			сильной команде.<br>Денежное вознаграждения на данном этапе не играет роли(звучит очень странно, но иногда знания стоят дороже)</p>
+				<h2><a href="https://github.com/CrKot"></a>Мой код на GitHub</h2>
 				<h2> Опыт работы</h2>
 				<p>Яндекс(2020)</p>
 				<ul>
@@ -29,10 +31,12 @@
 				</ul>
 				<h2>Образование</h2>
 				<p>Курсы Hexlet (в процессе обучения)</p>
+				<p><a href="https://ru.hexlet.io/u/artemkrv"> Мой профиль на Hexlet</a></p>
 				<ul>
 					<li>Фронтенд JavaScript</li>
 					<li>Бэкенд JavaScript (node.js)</li>
-					<li>Верстальщик</li>
+					<li>HTML</li>
+					<li>CSS</li>>
 				</ul>
 				<p>Кемеровский Кооперативный Техникум</p>
 				<ul>
@@ -42,13 +46,15 @@
 				<ul>
 					<li>Менеджмент</li>
 				</ul>
-				<h2>Личные качетва</h2>
+				<h2>Профессиональные навыки</h2>
 				<ul>
-				<li>Большой интерес к разработке</li>
-				<li>Готов работать усердно и долго</li>
-				<li>Хорошо усваиваю информацию</li>
-				<li>Усидчивость</li>
-				<li>Ответственность</li>
+					<li>JavaScript</li>
+					<li>Основы ООП</li>
+					<li>Работа с DOM</li>
+					<li>Работа с AST</li>
+					<li>Работа с GitHub</li>
+					<li>Навык работы с Node.js</li>
+					<li>Чистый ES6 код (как декларативный так и императивный)</li>
 				</ul>
 				<h2>Другие навыки</h2>
 				<ul>
@@ -56,6 +62,14 @@
 					<li>Smoke, регрессивное тестирование</li>
 					<li>Опыт использования ADB</li>
 					<li>опыт использования снифферов</li>
+				</ul>
+				<h2>Личные качетва</h2>
+				<ul>
+					<li>Большой интерес к разработке</li>
+					<li>Готов работать усердно и долго</li>
+					<li>Хорошо усваиваю информацию</li>
+					<li>Усидчивость</li>
+					<li>Ответственность</li>
 				</ul>
 		</div>
 		<div id="footer">
