fix github link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<p>В приоритете любой тип занятости для прокачки навыков, с надеждой на долгосрочное сотрудничество.<br>
 			Идеально будет именно повышать скилл т.к есть огромный интерес и желание стать действительно хорошим специалистом в хорошей, 
 			сильной команде.<br>Денежное вознаграждения на данном этапе не играет роли(звучит очень странно, но иногда знания стоят дороже)</p>
-				<h2><a href="https://github.com/CrKot"></a>Мой код на GitHub</h2>
+				<h3><a href="https://github.com/CrKot"> Мой код на GitHub</a></h3>
 				<h2> Опыт работы</h2>
 				<p>Яндекс(2020)</p>
 				<ul>
