--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<li>Фронтенд JavaScript</li>
 					<li>Бэкенд JavaScript (node.js)</li>
 					<li>HTML</li>
-					<li>CSS</li>>
+					<li>CSS</li>
 				</ul>
 				<p>Кемеровский Кооперативный Техникум</p>
 				<ul>
