--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 					<li>Работа с GitHub</li>
 					<li>Навык работы с Node.js</li>
 					<li>Чистый ES6 код (как декларативный так и императивный)</li>
+					<li>jQuery</li>
+					<li>Асинхронный код</li>
 					<li>Event Loop</li>
 					<li>Fluent interface</li>
 				</ul>
